[package]
name = "bevy_naia_datagram"
version = "0.1.0"
edition = "2018"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
description = "Networking plugin for Bevy engine running on naia-socket (native + wasm) for UDP packets"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/RJ/bevy_datagram"
repository = "https://github.com/RJ/bevy_datagram"
keywords = ["bevy", "gamedev", "networking", "udp", "webrtc", "wasm"]
categories = [
    "game-development",
    "network-programming",
    "wasm",
    "web-programming",
]
exclude = [".git*"]

[features]
default = ["use-udp"]
use-udp = ["naia-server-socket/use-udp"]
use-webrtc = [
    "naia-server-socket/use-webrtc",
    "naia-client-socket/wbindgen",
    "futures-timer/wasm-bindgen"
]

[dependencies]
bevy = {version = "0.5", default-features = false}
naia-client-socket = { version = "0.6.1", features = ["multithread"] }
bytes = "1.0"
log = "0.4.14"
futures-lite = "1.11"
crossbeam-channel = "0.5"
cfg-if = "1.0"
instant = "0.1"
futures = "0.3"
futures-timer = "3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
naia-server-socket = "0.5"

[dev-dependencies]
clap = "2.33.3"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "=0.2.69" # pin to Bevy's dependency